# librecl

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build_dependencies.sh  build_llvm.sh  configure.sh  out.txt
.github/: dependabot.yml  integration_test_configs.json
.github/scripts/: generate_test_matrix.js
.github/workflows/: integration.yaml  lint.yaml  pipeline-android.yaml  pipeline.yaml  postcommit.yaml  precommit.yaml  pulldown.yaml  release_please.yaml
cmake/modules/: AddLibreCL.cmake  FileEmbed.cmake
doc/design/: MetalBackend.md
examples/: CMakeLists.txt  platform_info.cpp  vector_add.cpp
integration-tests/: CMakeLists.txt
integration-tests/config/: cpu-exclude.txt
integration-tests/src/: basic-kernel.cpp  basic-platform.cpp  fixture.hpp
runtimes/api_generator/: Cargo.toml
runtimes/api_generator/src/: lib.rs
runtimes/framework/: Cargo.toml
runtimes/framework/src/: cl_types.rs  context.rs  device.rs  kernel.rs  lib.rs  platform.rs  program.rs  queue.rs  utils.rs
runtimes/opencl/: Cargo.toml  build.rs
runtimes/opencl/src/: bindings.rs  lib.rs
runtimes/vulkan/: Cargo.toml
runtimes/vulkan/src/: device.rs  lib.rs  platform.rs
src/: CMakeLists.txt  apis.def  dispatch.cpp
src/compiler/: CMakeLists.txt  Cargo.toml  ClangFrontend.cpp  ClangFrontend.hpp  Compiler.hpp  LCLJIT.hpp  MetalBackend.cpp  MetalBackend.hpp  SPIRVFrontend.cpp  SPIRVFrontend.hpp  TranslateToCpp.cpp  VulkanBackend.cpp  VulkanBackend.hpp  VulkanSPVBackendImpl.cpp  VulkanSPVBackendImpl.hpp  backend.hpp  build.rs  compiler.hpp  ffi.rs  frontend.cpp  frontend.hpp  frontend_impl.hpp  kernel_info.hpp  ld-version-script.txt  lib.cpp  lib.rs  rust_bindings.cpp  transformations.cpp  transformations.hpp  visibility.hpp
src/compiler/dialects/LibreCL/IR/: CMakeLists.txt  LibreCLDialect.cpp  LibreCLDialect.h  LibreCLDialect.td  LibreCLOps.cpp  LibreCLOps.h  LibreCLOps.td
src/compiler/dialects/RawMemory/: CMakeLists.txt  RawMemoryDialect.cpp  RawMemoryDialect.h  RawMemoryDialect.td  RawMemoryOps.cpp  RawMemoryOps.h  RawMemoryOps.td  RawMemoryTypes.cpp  RawMemoryTypes.h
src/compiler/dialects/Struct/: CMakeLists.txt  StructDialect.cpp  StructDialect.h  StructDialect.td  StructOps.cpp  StructOps.h  StructOps.td  StructTypes.cpp  StructTypes.h
src/compiler/include/: ClangFrontend.hpp  MetalBackend.hpp  backend.hpp  frontend.hpp  visibility.hpp
src/compiler/opencl/: Compiler.cpp  Compiler.hpp  CppEmitter.hpp  Options.h  TranslateToCpp.cpp  kernel_info.hpp  rust_bindings.cpp  rust_bindings.hpp
src/compiler/passes/: AIRFunctionArguments.cpp  AIRKernelABI.cpp  passes.hpp
src/compiler/passes/mlir/: AIRKernelABIPass.cpp  CMakeLists.txt  ExpandGPUBuiltins.cpp  ExpandOpenCLFunctionsPass.cpp  GPUToCppPass.cpp  GPUToSPIRVPass.cpp  InferPointerTypesPass.cpp  LowerABIAttributesPass.cpp  SPIRToGPUConversion.cpp  SPIRVLayoutUtils.cpp  SPIRVLayoutUtils.h  StructureCFGPass.cpp  passes.hpp
src/plugins/: CMakeLists.txt
src/plugins/metal/: CMakeLists.txt
src/runtime/: CMakeLists.txt  Cargo.toml  build.rs  lib.rs
src/runtime/api/: cl_device_info.rs  cl_error_codes.rs  cl_icd.rs  cl_types.rs  context.rs  device.rs  error_handling.rs  event.rs  extensions.rs  generate_error_codes.py  kernel.rs  memory.rs  mod.rs  platform.rs  program.rs  queue.rs  utils.rs
src/runtime/api/autogen/: generate_context_info.py  generate_device_info.py
src/runtime/api/info/: cl_context_info.rs
src/runtime/builtin/: common.mlir
src/runtime/builtin/kernels/: blas.mlir
src/runtime/common/: cl_types.rs  command_pool.rs  context.rs  device.rs  error_handling.rs  kernel.rs  memory.rs  mod.rs  platform.rs  program.rs  queue.rs  utils.rs
src/runtime/cpu/: device.rs  mod.rs  platform.rs
src/runtime/cuda/: CMakeLists.txt  common.hpp  device.cpp  device.hpp  event.hpp  platform.cpp  platform.hpp  queue.cpp  queue.hpp
src/runtime/cuda/runtime/: common.hpp
src/runtime/devicelib/: CMakeLists.txt
src/runtime/devicelib/metal/: CMakeLists.txt  index.metal
src/runtime/framework/: CMakeLists.txt  context.cpp  debug_modes.cpp  device.cpp  error.hpp  info.hpp  kernel.cpp  log.cpp  log.hpp  memory.cpp  ocl_api.hpp  platform.cpp  program.cpp  queue.cpp  utils.hpp
src/runtime/interface/: context.rs  device.rs  event.rs  kernel.rs  memory.rs  mod.rs  platform.rs  program.rs  queue.rs
src/runtime/metal/: CMakeLists.txt  context.hpp  context.rs  device.hpp  device.rs  kernel.cpp  kernel.rs  memory.rs  mod.rs  platform.hpp  platform.rs  program.cpp  program.hpp  program.rs  queue.hpp  queue.rs
src/runtime/mock/: mod.rs  platform.rs
src/runtime/vulkan/: CMakeLists.txt  command.cpp  command.hpp  command_pool.rs  context.cpp  context.hpp  context.rs  device.cpp  device.hpp  device.rs  event.rs  kernel.cpp  kernel.hpp  kernel.rs  lcl_program.rs  memory.cpp  memory.hpp  memory.rs  mod.rs  platform.cpp  platform.hpp  platform.rs  program.cpp  program.hpp  program.rs  queue.cpp  queue.hpp  queue.rs  vma_buffer.rs
src/runtime_old/: CMakeLists.txt
src/runtime_old/cpu/: CMakeLists.txt
src/runtime_old/framework/: context.cpp  debug_modes.hpp  device.cpp  error.hpp  info.hpp  kernel.cpp  memory.cpp  ocl_api.hpp  platform.cpp  program.cpp  queue.cpp  utils.hpp
src/runtime_old/metal/: device.hpp  kernel.hpp  memory.cpp  memory.hpp  metal.cpp  platform.hpp  queue.hpp
src/runtime_old/vulkan/: command.cpp  context.cpp  kernel.hpp  memory.hpp  platform.hpp  (+3 more)
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test_old/: lit.cfg.py
test_old/transforms/: sctructured_control_flow.mlir
tests/: Cargo.toml
tests/runtime/: context.rs  device.rs  integration.rs  platform.rs  test_utils.rs
tools/: CMakeLists.txt
tools/lcl-opt/: CMakeLists.txt  main.cpp
tools/lcloc/: CMakeLists.txt  Cargo.toml  main.cpp
tools/lcloc_bak/: CMakeLists.txt
utils/cpmetal/: Cargo.toml
utils/lcl_derive/: Cargo.toml
utils/lcl_derive/src/: lib.rs
utils/llvm_native/: Cargo.toml  build.rs
utils/ocl_args/: Cargo.toml
utils/ocl_type_wrapper/: Cargo.toml
utils/ocl_type_wrapper/src/: lib.rs
(+27 files in other folders)
