[package]
name = "librecl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "src/compiler",
  "src/runtime",
  "tools/lcloc",
  "utils/ocl_args",
  "utils/ocl_type_wrapper",
  "utils/cpmetal",
]
