[package]
name = "vulkan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.13.0"
framework = { path = "../framework"}
libc = "0.2.126"
cxx = "1.0"
vulkano = "0.30.0"

[lib]
crate-type = ["cdylib"]
name = "lcl_icd_vulkan"
