[package]
name = "vulkan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api_generator = { path = "../api_generator" }
framework = { path = "../framework" }
once_cell = "1.13.0"
libc = "0.2.126"
cxx = "1.0"
vulkano = "0.30.0"
stdext = "0.3.1"
backtrace = "0.3.66"

[lib]
crate-type = ["cdylib"]
name = "lcl_icd_vulkan"
