[package]
name = "librecl_compiler"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
publish = false

[lib]
path = "./lib.rs"

[dependencies]
libc = "0.2.126"
ocl_args = { path = "../../utils/ocl_args" }

[build-dependencies]
cmake = "0.1"
which = "4.2.5"
build-target = "0.4.0"
bindgen = "0.60.1"

