[package]
name = "librecl_runtime"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librecl_compiler = { path = "../compiler" }
libc = "0.2.126"
stdext = "0.3.1"
backtrace = "0.3.66"
once_cell = "1.13.0"
enum_dispatch = "0.3.8"
bitflags = "1.3.2"
cfg-if = "1.0.0"
tokio = { version = "1.20.0", features = ["rt-multi-thread"] }
bytemuck = "1.11.0"
ocl_type_wrapper = { path = "../../utils/ocl_type_wrapper" }
tracing = "0.1.36"
pytorch-cpuinfo = "0.1.1"
cpmetal = { path = "../../utils/cpmetal", optional = true }
vulkano = { git = " https://github.com/alexbatashev/vulkano", branch = "vma", features = ["vma"], optional = true }
vk-mem = { git = "https://github.com/gwihlidal/vk-mem-rs", rev = "0be8984", optional = true }
ash = { version = ">=0.35", optional = true }
parking_lot = "0.12.1"

[lib]
crate-type = ["cdylib"]
name = "lcl_icd_runtime"
path = "./lib.rs"

[features]
default = ["vulkan", "metal"]
vulkan = ["vulkano", "vk-mem", "ash"]
metal = ["cpmetal"]

[build-dependencies]
build-target = "0.4.0"
bindgen = "0.60.1"

[package.metadata.generate-rpm]
license = "Apache 2.0"
description = "descr"
assets = [
  {source = "target/release/liblcl_icd_runtime.so", dest = "/usr/lib/liblcl_icd_runtime.so", permission = 655, config = false, doc = false}
]

[package.metadata.deb]
maintainer = "Alexander Batashev <alexbatashev@gmail.com>"
copyright = "2022, LibreCL"
license-file = ["../../LICENSE", "4"]
extended-description = """Implementation of OpenCL interfaces on top of other APIs"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/liblcl_icd_runtime.so", "usr/lib/", "755"],
]
