[package]
name = "lcl_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.98"
quote = "1.0.20"
darling = "0.14.1"
convert_case = "0.5.0"
proc-macro2 = "1.0.43"

[build-dependencies]

[lib]
proc-macro = true
