[package]
name = "ocl_type_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0.2"
quote = "1.0.20"
darling = "0.14.1"
convert_case = "0.6.0"
proc-macro2 = "1.0.43"

[build-dependencies]

[lib]
proc-macro = true
